@@ -66,7 +66,7 @@
 
 /* Symbolic levels for output levels. */
 enum output_level {
-	GW_DEBUG, GW_INFO, GW_WARNING, GW_ERROR, GW_PANIC
+	GW_DEBUG, GW_INFO, GW_WARNING, GW_ERROR, GW_PANIC, GW_BACKTRACE
 };
 
 /* defines if a log-file is exclusive or not */
@@ -87,6 +87,12 @@ void log_shutdown(void);
 #define	panic	gw_panic
 
 void gw_panic(int, const char *, ...) PRINTFLIKE(2,3);
+
+/*
+ * Print given stacktrace. If no stackstrace given then stacktrace will be
+ * initialized
+ */
+void gw_backtrace(void **, size_t, int);
 
 /* Print a normal error message. Used when something which should be
  * investigated and possibly fixed, happens. The error might be fatal, too,
